--- a/Web/src/styles-ar.css
+++ b/Web/src/styles-ar.css
@@ -134,9 +134,15 @@ header .social a.lang {
   .burger {
     left: 20px;
   }
+  .size-list .size_item {
+    margin: 0 0 0 10px;
+  }
 }
 @media only screen and (max-width: 767px) {
   .story {
     background: #fff url(assets/images/bg-about01-ar.jpg) no-repeat top -45px left -230px;
+  }
+  .size-list .size_item {
+    margin: 0 0 0 4px;
   }
 }
