--- a/Web/src/assets/css/style.css
+++ b/Web/src/assets/css/style.css
@@ -1381,24 +1381,25 @@ img.over {
 }
 
 .button {
-  position: relative;
-  background: #cea739 url(../images/bg-button.jpg) no-repeat left center;
-  background-size: cover;
-  border:none;
-  outline: none;
-  font-size: 14px;
-  color: #4f93ce;
-  margin: 5px 0 0 0;
-  padding: 10px 20px;
-  cursor: pointer;
-  -webkit-transition: background-color 0.28s ease, color 0.28s ease,
-  box-shadow 0.28s ease;
-  transition: background-color 0.28s ease, color 0.28s ease,
-  box-shadow 0.28s ease;
-  overflow: hidden;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2),
-  0 1px 5px 0 rgba(0, 0, 0, 0.12);
+	position: relative;
+	background: #d1992f;
+	background-size: auto;
+	background-size: 120% auto;
+	border: none;
+	outline: none;
+	font-size: 14px;
+	color: #4f93ce;
+	margin: 5px 0 0 0;
+	padding: 14px 20px;
+	cursor: pointer;
+	font-weight: 600;
+	text-shadow: 1px 1px 3px rgba(0,0,0,0.4);
+	transition: background-color 0.28s ease, color 0.28s ease, box-shadow 0.28s ease;
+	overflow: hidden;
+	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+	border-radius: 5px;
 }
+
 .button span {
   color: #fff;
   position: relative;
@@ -1408,6 +1409,7 @@ img.over {
 .button:focus {
   outline: none;
 }
+
 .buyform {
   padding: 0px;
 }
