defined staging environment in layout

--- a/Services/Analystor.Nishomi.Admin/Views/Shared/_Layout.cshtml
+++ b/Services/Analystor.Nishomi.Admin/Views/Shared/_Layout.cshtml
@@ -147,6 +147,39 @@
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCYeY_HmCNQd_06xfkZ0ukys2Zs3P4-_iQ"></script>
     </environment>
 
+    <environment include="Staging">
+        <script src="~/js/multiselect.min.js"></script>
+        <script src="~/assets/js/jquery.min.js"></script>
+        <script src="~/assets/js/bootstrap.bundle.min.js"></script>
+        <script src="~/assets/js/jquery.easy-autocomplete.min.js"></script>
+        <script src="~/assets/js/common.js"></script>
+        <script src="~/assets/js/plugins.js"></script>
+        <script src="~/js/common/common.js"></script>
+        <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+        <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+        <script src="~/lib/jquery-ajax-unobtrusive/jquery.unobtrusive-ajax.js"></script>
+        <script src="~/js/bootstrap-datepicker.min.js"></script>
+        <script src="~/js/uuid.js"></script>
+        <script src="~/js/site.js"></script>
+        <script src="~/js/sweetalert.js"></script>
+        <script src="~/js/dropzone.js"></script>
+        <script src="~/assets/js/Chart.min.js"></script>
+        <script src="~/assets/js/chartjs-plugin-labels.js"></script>
+        <script src="~/assets/js/moment.min.js"></script>
+        <script src="~/assets/js/daterangepicker.min.js"></script>
+        <script src="~/assets/js/gauge.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.min.js"></script>
+        <script src="~/js/bootstrap-datetimepicker.min.js"></script>
+        <script src="~/assets/js/jsgantt.js"></script>
+        <script src="~/js/dash-board/dashboard.js?v=1"></script>
+        <script src="~/js/highstock.js"></script>
+        <script src="~/js/datatablemin.js"></script>
+        <script src="~/js/datatablebutton.js"></script>
+        <script src="~/js/datatableprint.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jsbarcode/3.11.0/JsBarcode.all.min.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCYeY_HmCNQd_06xfkZ0ukys2Zs3P4-_iQ"></script>
+    </environment>
+
     <environment include="Production">
         <script src="~/js/multiselect.min.js"></script>
         <script src="~/assets/js/jquery.min.js"></script>
