--- a/Services/Analystor.Nishomi.Admin/Views/Shared/_Layout.cshtml
+++ b/Services/Analystor.Nishomi.Admin/Views/Shared/_Layout.cshtml
@@ -24,6 +24,19 @@
         <link href="~/assets/css/jquery-ui.css" rel="stylesheet" type="text/css" />
     </environment>
 
+    <environment include="Staging">
+        <link rel="stylesheet" href="https://cdn.materialdesignicons.com/3.0.39/css/materialdesignicons.min.css" />
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
+        <link rel="stylesheet" href="~/assets/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="~/assets/css/plugins.css" />
+        <link rel="stylesheet" href="~/assets/css/theme.css">
+        <link rel="stylesheet" href="~/css/sweetalert.css">
+        @*<link rel="stylesheet" href="~/css/multi.css">*@
+        <link href="~/css/bootstrap-datetimepicker.min.css" rel="stylesheet" />
+        @*<link href="~/assets/images/favicon.png" rel="shortcut icon" />*@
+        <link href="~/assets/css/jquery-ui.css" rel="stylesheet" type="text/css" />
+    </environment>
+
     <environment include="Production">
         <link rel="stylesheet" href="https://cdn.materialdesignicons.com/3.0.39/css/materialdesignicons.min.css" />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
